--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "file-loader": "^0.8.4",
     "html-webpack-plugin": "^1.6.2",
     "image-webpack-loader": "^1.6.2",
+    "isomorphic-fetch": "^2.1.1",
     "path": "^0.12.7",
-    "react": "^0.13.3",
-    "react-bootstrap": "^0.26.4",
-    "react-hot-loader": "^1.3.0",
-    "react-router": "^0.13.4",
+    "react": "^0.14",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.3",
+    "redux-logger": "^2.0.4",
+    "redux-thunk": "^1.0.0",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
