--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "redux": "^3.0.3",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
+    "remarkable": "^1.6.0",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
