--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.0",
     "redux": "^3.0.3",
+    "redux-devtools": "^2.1.5",
     "redux-logger": "^2.0.4",
     "redux-thunk": "^1.0.0",
     "remarkable": "^1.6.0",
