--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "html-webpack-plugin": "^1.6.2",
     "image-webpack-loader": "^1.6.2",
     "isomorphic-fetch": "^2.1.1",
+    "open": "0.0.5",
+    "optimist": "^0.6.1",
     "path": "^0.12.7",
     "react": "^0.14",
     "react-dom": "^0.14.0",
@@ -45,6 +47,7 @@
     "remarkable": "^1.6.0",
     "sass-loader": "^3.0.0",
     "style-loader": "^0.13.0",
+    "stylus-loader": "^1.4.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
